refactor: Make build definition more concise.